<resources>
    <string name="app_name" translatable="false">lucinda</string>
    <string name="lightning" translatable="false">\u26A1</string>
    <string name="filled_bullet" translatable="false">\u25CF</string>
    <string name="boost_me" translatable="false">\u263C</string>
    <string name="quotes">quotes</string>
    <string-array name="panicUrls">
        <item>https://bongo.cat</item>
        <item>https://hmpg.net/</item>
    </string-array>
    <string name="categories">categories</string>
    <string name="ui_pause">pause</string>
    <string name="ui_resume">resume</string>
    <string name="ui_start">start</string>
    <string name="hhmmss">00:00:00</string>
    <string name="ui_just_do_it">just do it</string>
    <string name="statistics">statistics</string>
    <string name="today">today</string>
    <string name="search">search</string>
    <string name="todo">todo</string>
    <string name="appointments">appointments</string>
    <string name="projects">projects</string>
    <string name="home">home</string>
    <string name="anxiety">anxiety</string>
    <string name="energy">energy</string>
    <string name="mood">mood</string>
    <string name="stress">stress</string>
    <string name="heading">heading</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="category">category</string>
    <string name="save">save</string>
    <string name="days">days</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>
    <string name="thursday">thursday</string>
    <string name="edit">edit</string>
    <string name="parent_item_heading">parent item heading</string>
    <string name="parent_item">parent item</string>
    <string name="comment">comment</string>
    <string name="location">location</string>
    <string name="show_affirmation">show affirmation</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="start">start</string>
    <string name="done">done</string>
    <string name="mental_comment">mental comment</string>
    <string name="ok">ok</string>
    <string name="update">update</string>
    <string name="language">language</string>
    <string name="save_mental">save mental</string>
    <string name="dark_mode">dark mode</string>
    <string name="view_mode">view mode</string>
    <string name="settings">settings</string>
    <string name="time_please">time please</string>
    <string name="add_child_item">add child item</string>
    <string name="duration">duration</string>
    <string name="dismiss">dismiss</string>
    <string name="estimate">estimate</string>
    <string name="click_to_view">click to view</string>
    <string name="estimateDummyInfo">i estimate that the this activity will have a durationhn of 1 hour and 7 minutes, and it will set back my energy level by 2 units, there you are</string>
    <string name="created">created</string>
    <string name="minutes">minutes</string>
    <string name="add_period">add repeat</string>
    <string name="show_estimate">show estimate</string>
    <string name="hours">hours</string>
    <string name="seconds">seconds</string>
    <string name="notification">notification</string>
    <string name="info">info</string>
    <string name="delete">delete</string>
    <string name="start_sequence">start sequence</string>
    <string name="alarm">alarm</string>
    <string name="date">date</string>
    <string name="date_and_time">date and time</string>
    <string name="repeat">repeat</string>
    <string name="time">time</string>
    <string name="day_of_week">day of week</string>
    <string name="next" translatable="false"><![CDATA[>]]></string>
    <string name="prev" translatable="false"><![CDATA[<]]></string>
    <string name="comment_etc">comment etc</string>
    <string name="sum">sum</string>
    <string name="average">average</string>
    <string name="first_date">first date</string>
    <string name="last_date">last date</string>
    <string name="reward">reward</string>
    <string name="go_to_parent_list"><![CDATA[< go to parent list]]></string>
    <string name="title_activity_navigation2">NavigationActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="delete_item">delete item</string>
    <string name="save_item">save item</string>
    <string name="add_category">add category</string>
    <string name="color">color</string>
    <string name="week">week</string>
    <string name="week_with_number">week $1%d</string>
    <string name="month">month</string>
    <string name="send">send</string>
    <string name="lucinda" translatable="false">lucinda</string>
    <string name="add_message">add message</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_password">create password</string>
    <string name="use_password">use password</string>
    <string name="user">user</string>
    <string name="mental">Mental</string>
    <string name="is_appointment" translatable="false">is appointment</string>
    <string name="_00_00_00" translatable="false">00:00:00</string>
    <string name="updated">updated</string>
    <string name="state">state</string>
    <string name="is_prioritized">is prioritized</string>
    <string name="updated_epoch">updated epoch</string>
    <string name="target_time">target time</string>
    <string name="target_date">target date</string>
    <string name="next_date">next date</string>
    <string name="notification_date">notification date</string>
    <string name="notification_time">notification time</string>
    <string name="description">description</string>
    <string name="add">add</string>
    <string name="add_appointment">add appointment</string>
    <string name="add_or_delete">add or delete</string>
    <string name="has_child">has child</string>
    <string name="id" translatable="false">id</string>
    <string name="add_notification">add notification</string>
    <string name="tags">tags</string>
    <string name="add_or_delete_notification">add or delete notification</string>
    <string name="mood_level">mood: %1$d</string>
    <string name="anxiety_level">anxiety: %1$d</string>
    <string name="add_or_delete_repeat">add or delete repeat</string>
    <string name="energy_level">energy level</string>
    <string name="estimated_energy_level">estimated energy level</string>
    <string name="parent_id">parent id</string>
    <string name="content">content</string>
    <string name="publish">publish</string>
    <string name="subject">subject</string>
    <string name="firstdate">firstDate</string>
    <string name="total_duration">total duration:</string>
    <string name="stress_level">stress: %1$d</string>
    <string name="add_mental">add mental</string>
    <string name="mental_sum">mental sum</string>
    <string name="economy">economy</string>
    <string name="navigation_drawer">navigation drawer</string>
    <string name="web_page">web page</string>
    <string name="sequence">sequence</string>
    <string name="game">game</string>
    <string name="panic_action">panic action</string>
    <string name="swedish">swedish</string>
    <string name="english">english</string>
    <string name="open_db" translatable="false">open db</string>
    <string name="add_to_list">add to list: %1$s</string>
    <string name="every_day">every day</string>
    <string name="every_week">every week</string>
    <string name="every_month">every month</string>
    <string name="every_year">every year</string>
    <string name="custom">custom</string>
    <string name="graph_today">graph today</string>
    <string name="timer">timer</string>
    <string name="estimate_today">estimate today</string>
    <string name="enchilada">everything</string>
    <string name="customize">customize</string>
    <string name="show_in_calendar">show in calendar</string>
    <string name="projects_tabs">projects tabs</string>
    <string name="add_item">add item</string>
    <string name="actual">actual</string>
    <string name="choose_category">choose category</string>
    <string name="actual_duration">actual duration</string>
    <string name="currently">currently</string>
    <string name="estimated">estimated</string>
    <string name="missing_heading">missing heading</string>
    <string name="log_in">log in</string>
    <string name="password">password</string>
    <string name="log_out">log out</string>
    <string name="top_ten">top ten</string>
    <string name="message_board">message board</string>
    <string name="contact_curt_rune">contact curt rune</string>
    <string name="every">every</string>
    <string name="postpone">postpone</string>
    <string name="_1_hour">1 hour</string>
    <string name="_1_day">1 day</string>
    <string name="_1_week">1 week</string>
    <string name="_1_month">1 month</string>
    <string name="are_you_sure">"are you sure?"</string>
    <string name="estimated_energy">estimated energy</string>
    <string name="ice_added">ICE ADDED</string>
    <string name="missing_telephone_number">MISSING TELEPHONE NUMBER</string>
    <string name="ice">ICE</string>
    <string name="add_webpage">add webpage</string>
    <string name="pending">pending</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="mental_history">mental history</string>
    <string-array name="periods">
        <item name="day">day</item>
        <item name="week">week</item>
        <item name="month">month</item>
        <item name="year">year</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lightning_bolt"><![CDATA[&#128498;]]></string>
    <string name="add_a_message_to_the_message_board">add a message to the message board</string>
    <string name="is_calender">calendar</string>
    <string name="type_here">type here</string>
    <string name="title_activity_repeat">RepeatActivity</string>
    <string name="title_activity_index_kt">IndexActivityKt</string>
    <string name="title_activity_month_calendar_kt">MonthCalendarActivityKt</string>
    <string name="title_activity_medicin" translatable="false">MedicinActivity</string>
    <string name="title_activity_user_settings">UserSettingsActivity</string>
    <string name="title_activity_day_calendar">DayCalendarActivity</string>
    <string name="title_activity_item_editor">ItemEditorActivity</string>
    <string name="title_activity_db_admin">DbAdmin</string>
    <string name="panic_button">panic button</string>
    <string name="contacts">contacts</string>
    <string name="my_day">my day</string>
    <string name="medicines">medicines</string>
    <string name="energy_value">energy: %1$d</string>
    <string name="add_medicine">add medicine</string>
    <string name="dosage">dosage</string>
    <string name="doctor">doctor</string>
</resources>