<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:id="@+id/todayActivity_home"
    android:icon="@drawable/baseline_home_24"
    android:title="@string/home"
    app:showAsAction="always"/>
    <item
        android:id="@+id/todayActivity_viewStatistics"
        android:title="@string/statistics" />
    <item android:id="@+id/todayActivity_showAffirmation"
        android:title="@string/show_affirmation"/>
    <item android:id="@+id/todayActivity_showEstimate"
        android:title="@string/show_estimate"/>
    <item android:id="@+id/todayActivity_showPeriodDialog"
        android:title="@string/add_period"/>
    <item android:id="@+id/todayActivity_startSequence"
        android:title="@string/start_sequence"/>
</menu>