<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/panicActionDialog_radioButtonGame"
            android:text="@string/game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/panicActionDialog_radioButtonICE"
            android:text="@string/ice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/panicActionDialog_radioButtonSequence"
            android:text="@string/sequence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/panicActionDialog_radioURL"
            android:text="@string/web_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <Button
        android:id="@+id/panicActionDialog_dismiss"
        android:text="@string/dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/panicActionDialog_ok"
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>