<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/today"
        android:id="@+id/bottomNavigation_today"
        android:icon="@drawable/baseline_today_24"/>
    <item android:title="@string/week"
        android:id="@+id/navigationDrawer_weekly"
        android:icon="@drawable/baseline_calendar_view_week_24"/>
    <item
        android:id="@+id/navigationDrawer_monthCalender"
        android:icon="@drawable/baseline_calendar_view_month_24"
        android:title="@string/month" />
    <item
        android:id="@+id/bottomNavigation_todo"
        android:icon="@drawable/baseline_checklist_24"
        android:title="@string/todo"/>
    <item android:title="@string/projects"
        android:id="@+id/bottomNavigation_projects"
        android:icon="@drawable/baseline_checklist_24"/>
    <item android:title="@string/appointments"
        android:id="@+id/bottomNavigation_appointments"
        android:icon="@drawable/baseline_event_24"
        />
    <group>
    <item android:id="@+id/navigationDrawer_durationFragment"
        android:title="duration"/>
    <item android:title="top ten"
        android:id="@+id/navigationDrawer_topTen"/>
    <item android:id="@+id/bottomNavigation_enchilada"
        android:title="enchilda"
        android:icon="@drawable/baseline_checklist_24"/>
    <item android:id="@+id/navigationDrawer_graphFragment"
        android:title="graph today"/>
    </group>
    <item android:id="@+id/navigationDrawer_estimateFragment"
        android:title="estimate fragment"/>
    <item android:title="customize"
        android:id="@+id/navigationDrawer_customizeFragment"/>

    <item android:id="@+id/navigationDrawer_contactFragment"
        android:title="contact curt rune"/>
</menu>