<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="mental history fragment" />
    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/mentalHistoryFragment_buttonEnergy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/energy"/>
        <RadioButton
            android:id="@+id/mentalHistoryFragment_buttonMood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood"/>
        <RadioButton
            android:id="@+id/mentalHistoryFragment_buttonAnxiety"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anxiety"/>
        <RadioButton
            android:id="@+id/mentalHistoryFragment_buttonStress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stress"/>
    </RadioGroup>
    <com.jjoe64.graphview.GraphView
        android:id="@+id/mentalHistoryFragment_graphView"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>