<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".activities.DevActivity">


    <TextView
        android:id="@+id/devActivity_mainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="main"
        android:minHeight="48dp"
        android:layout_marginTop="24sp"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/devActivity_economy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/economy"
        android:minHeight="48dp"
        android:layout_marginTop="24sp"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/devActivity_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_marginTop="24sp"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/devActivity_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:layout_marginTop="24sp"
        android:focusable="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:minHeight="48dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/quotes"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/homeActivity_navigationDrawer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/navigation_drawer"
        android:textSize="24sp" />

</LinearLayout>