<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.GraphActivity">
    <TextView
        android:id="@+id/graphFragment_date"
        android:layout_width="match_parent"
        android:textSize="26sp"
        android:gravity="center"
        android:text="2024-05-30"
        android:minHeight="48dp"
        android:layout_height="wrap_content"
        tools:ignore="HardcodedText" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/graphFragment_radioButtonEnergy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/energy" />

        <RadioButton
            android:id="@+id/graphFragment_radioButtonAnxiety"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anxiety" />

        <RadioButton
            android:id="@+id/graphFragment_radioButtonStress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stress" />

        <RadioButton
            android:id="@+id/graphFragment_radioButtonMood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood" />

    </RadioGroup>
    <com.jjoe64.graphview.GraphView
        android:id="@+id/graphActivity_graphView"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</LinearLayout>